@@ -1,3 +1,7 @@
+Wed Oct 16 15:44:24 2002  George Lebl <jirka@5z.com>
+
+	* src/funclib.c: the constat functions take no arguments
+
 Wed Oct 16 15:42:13 2002  George Lebl <jirka@5z.com>
 
 	* lib/linear_algebra/*.gel: add some help strings, add DotProduct and
